--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    
+    <div class="game">
+        <div id="character"></div>
+        <div id="block"></div>
+    </div>
     
 </body>
+<!-- <script src="script.js"></script> -->
 
 </html>
